--- a/templates/mot-history.html
+++ b/templates/mot-history.html
@@ -259,9 +259,9 @@
 
         <div class="disclaimer">
             <p>Disclaimer: This report is generated using DVLA data based on the user-supplied information and is deemed valid as of the date and time.</p>
-            <p>This report is published free of charge to the public by RENIX (UK) Limited. We do not take any responsibility for any discrepancies or litigation raised through this report.</p>
-            <p>Renix (UK) Limited is not liable for any damages or losses incurred through the use of this report. All data is provided as-is, and no warranties are implied. Any reliance on the information contained herein is at the user's own risk.</p>
-            <p>RENIX(UK) Limited | Website: https://renix.co.uk | Email: info@renix.co.uk</p>
+            <p>This report is published free of charge to the public by AutoNgx. We do not take any responsibility for any discrepancies or litigation raised through this report.</p>
+            <p>AutoNgx is not liable for any damages or losses incurred through the use of this report. All data is provided as-is, and no warranties are implied. Any reliance on the information contained herein is at the user's own risk.</p>
+           
         </div>
     </div>
 
