--- a/templates/map_dashboard_google.html
+++ b/templates/map_dashboard_google.html
@@ -71,7 +71,7 @@
 
   <div class="container my-4">
 
-      <div class="row">
+      <div class="row d-none d-md-block">
         <div class="col-md-12">
           <div class="card shadow-sm border-0" style="background: linear-gradient(135deg, #e0f2fe, #f8fafc);">
             <div class="card-body d-flex align-items-center justify-content-between flex-wrap gap-3">
@@ -220,7 +220,7 @@
                   <th>Start</th>
                   <th>Destination</th>
                   <th>Distance</th>
-                  <th>Current Duration</th>
+                  <th>Duration</th>
                   <th>Odometer</th>
                   <th>Date / Time</th>
                   <th>Action</th>
@@ -337,12 +337,6 @@
           <label class="form-label">Odometer Start</label>
           <input type="number" id="modalOdometerStart" class="form-control" placeholder="12540" min="2">
         </div>
-
-        <button class="button-primary w-100 mt-2"
-              onclick="location.href='{% url 'add_vehicle' %}'">
-          <i class="bi bi-plus-circle"></i> Add Vehicle
-       </button>
-
 
         <div class="alert alert-danger d-none mt-3" id="startTripError"></div>
 
